--- a/styles/style.css
+++ b/styles/style.css
@@ -71,6 +71,7 @@ ol {
 }
 
 .content__list-container {
+  position: relative;
   height: 299px;
   overflow: auto;
 }
@@ -118,7 +119,7 @@ ol {
   cursor: pointer;
 }
 
-.search-form__label:hover {
+.search-form__label:hover .search-form__label-text {
   text-decoration: underline 1px #fff;
   text-underline-offset: 5px;
 }
@@ -129,12 +130,12 @@ ol {
 }
 
 .search-form__textfield {
-  border-top: 1px solid #fff;
+  border-top: 1px solid currentColor;
   border-right: none;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid currentColor;
   border-left: none;
   padding: 2px 0;
-  color: #fff;
+  color: currentColor;
   font-family: inherit;
   font-weight: inherit;
   font-size: inherit;
@@ -168,9 +169,9 @@ ol {
 
 .search-form__pseudo-checkbox {
   display: block;
-  border: 1px solid #fff;
   width: 19px;
   height: 19px;
+  border: 1px solid #fff;
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
@@ -183,11 +184,9 @@ ol {
 }
 
 .button {
-
-  border: none;
-  outline: 1px solid #fff;
   padding: 5px 0;
-  color: #fff;
+  border: 1px solid currentColor;
+  color: currentColor;
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -239,7 +238,7 @@ ol {
 .content__list {
   display: flex;
   flex-direction: column;
-  gap: 27px;
+  gap: 31px;
 }
 
 .more-button {
@@ -248,7 +247,6 @@ ol {
 
 .content__card-link {
   display: block;
-  margin: 2px;
   text-decoration: none;
 }
 
@@ -278,14 +276,18 @@ ol {
 }
 
 .content__video-card-title {
+  max-width: 196px;
   padding: 2px 2px 5px;
+  overflow: hidden;
   color: #fff;
   font-family: Oswald, sans-serif;
   font-weight: 700;
   font-size: 30px;
   line-height: 1;
   text-transform: uppercase;
+  text-overflow: ellipsis;
   hyphens: auto;
+  white-space: nowrap;
 }
 
 .content__video-card-description {
@@ -296,8 +298,17 @@ ol {
 }
 
 .content__video-card-thumbnail {
+  margin-right: 2px;
+  display: -webkit-box;
+  max-width: 196px;
   object-fit: cover;
   object-position: center;
-  inline-size: 194px;
-  block-size: 103px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  hyphens: auto;
+  inline-size: 195px;
+  block-size: 101px;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  line-clamp: 4;
 }
